# Routines

./: ALPHA.md  README.md  pyproject.toml
src/routines/: __init__.py  cli.py  harness.py  protocol.py  registry.py
src/routines/alpha/: __init__.py  solitude.py  to_self.py  today.py
