[project]
name = "routines"
version = "0.1.0"
description = "Alpha's autonomous execution framework"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.19",
    "click>=8.1.0",
    "pendulum>=3.0.0",
    "psycopg[binary]>=3.1",
    "redis>=5.0.0",
]

[project.scripts]
routines = "routines.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/routines"]
