[project]
name = "routines"
version = "0.1.0"
description = "Alpha's autonomous execution framework"
requires-python = ">=3.11"
dependencies = [
    "alpha_sdk @ git+https://github.com/Pondsiders/Alpha-SDK@main",
    "click>=8.1.0",
    "pendulum>=3.0.0",
    "psycopg[binary]>=3.1",
    "redis>=5.0.0",
]

[project.scripts]
routines = "routines.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/routines"]
